Fixed mobile overflow

--- a/src/App.css
+++ b/src/App.css
@@ -297,7 +297,6 @@ footer {
   }
 
   .Nav-links a {
-    width: 100%;
     text-align: center;
     margin-left: 0 !important;
   }
